--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "desarrollo": "nodemon ./index.js",
-    "start": "node ./index.js"    
+    "start": "node ./index.js"
   },
   "author": "Edison Guananga",
   "license": "ISC",
@@ -15,7 +15,9 @@
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^6.2.10"
+    "mongoose": "^6.2.10",
+    "multer": "^1.4.4",
+    "shortid": "^2.2.16"
   },
   "devDependencies": {
     "nodemon": "^2.0.15"
